2023/04/21 (version 1.0.8)
- General: changes for PS 8
- General: copy payment url function

2022/10/07 (version 1.0.7)
- General: Added setting for special order status RECEIVED
- General: Keep settings.php after module reinstallation.
- Bug:     Fixed the display of the table of payments in the order detail in the administration.

2021/12/04 (version 1.0.6)
- General: Added setting to disable data checking on the option

2021/02/18 (version 1.0.5)
- General: Added module hooks

2021/01/14 (version 1.0.4)
- General: Added currency code to messages

2019/09/17 (version 1.0.3)
- Bug:     fixed issue in PS 1.7.6 regarding currency and order detail in administration

2019/04/19 (version 1.0.2)
- Bug:     fixed untranslated messages with long code
- General: preventing order submission error when re-inserting javascript files 

2019/03/29 (version 1.0.1)
- General: changed module settings
- Bug:     fixes bug with language of comunication URLs

2019/03/15 (version 1.0.0)
- General: first stable version of the module